# toy-lang

./: .gitignore  CMakeLists.txt  README.md  main.cpp  toyc.cpp
examples/: 1-ast.stderr
include/toy/: AST.h  Lexer.h  Parser.h
parser/: AST.cpp
